--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -44,103 +44,19 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 
 5. 使用題 3 的資料，在 $x_0 = 5$ 時找出 90% 預測區間。  
 
+Ans:
 
----
+相同資料： $n=10, s=1.732, t_{0.05,8}=1.860, \hat{y}_0=2.374$ (同題3)
 
-## 題4：平均反應值的 99% 信賴區間
+預測區間的公式在標準誤差項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
 
-**已知資料：**  
-- \( n = 6 \)  
-- \( s = 0.639 \)  
-- \(\sum x_i = 19, \sum x_i^2 = 71\)  
-- 迴歸式：\(\hat{y} = 3.58 + 0.82x\)  
-- \( x_0 = 2 \)  
-- 99% 信賴水準，\( df=4 \)，查表 \( t_{0.005,4} \approx 4.604 \)
+前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
+加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
-**計算參數：**  
-1. \(\bar{x} = \frac{19}{6} \approx 3.1667\)
+預測區間半徑： $t \cdot s \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.40$
 
-2. \(\sum (x_i - \bar{x})^2 = 71 - \frac{19^2}{6} = 71 - \frac{361}{6} = 71 - 60.1667 = 10.8333\)
+**預測區間：** $2.374 \pm 3.40 = [-1.026\, 5.774]$(比平均反應值的信賴區間[1.274, 3.474]寬)
 
-3. 預測平均值 \(\hat{y}_0 = \hat{y}(2) = 3.58 + 0.82 \times 2 = 3.58 + 1.64 = 5.22\)
+結論
 
-4. 標準誤差項：  
-   \[
-   \sqrt{\frac{1}{6} + \frac{(2 - 3.1667)^2}{10.8333}}
-   = \sqrt{0.1667 + \frac{1.3611}{10.8333}}
-   = \sqrt{0.1667 + 0.1255}
-   = \sqrt{0.2922} \approx 0.5405
-   \]
-
-5. 信賴區間半徑：  
-   \[
-   t \cdot s \cdot 0.5405 = 4.604 \times 0.639 \times 0.5405 \approx 1.59
-   \]
-
-**信賴區間：**  
-\[
-5.22 \pm 1.59 = [3.63,\, 6.81]
-\]
-
----
-
-## 題5：新觀察值的 90% 預測區間 (使用題3資料)
-
-相同資料：\( n=10, s=1.732, t_{0.05,8}=1.860, \hat{y}_0=2.374 \) (同題3)
-
-預測區間的公式在標準誤差項內多了「+1」：  
-\[
-\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}
-\]
-
-前題計算中 \(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656\)  
-加入 1 後：  
-\[
-1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567
-\]
-
-預測區間半徑：  
-\[
-t \cdot s \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.40
-\]
-
-**預測區間：**  
-\[
-2.374 \pm 3.40 = [-1.026,\, 5.774]
-\]
-
-由此可見，預測區間明顯比平均反應值的信賴區間（[1.274, 3.474]）更寬。
-
----
-
-## 題6：新觀察值的 99% 預測區間 (使用題4資料)
-
-相同資料：\( n=6, s=0.639, t_{0.005,4}=4.604, \hat{y}_0=5.22 \) (同題4)
-
-\[
-\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum(x_i-\bar{x})^2}=0.2922
-\]
-
-加入1：  
-\[
-1+0.2922=1.2922 \implies \sqrt{1.2922}=1.1364
-\]
-
-預測區間半徑：  
-\[
-4.604 \times 0.639 \times 1.1364 \approx 3.35
-\]
-
-**預測區間：**  
-\[
-5.22 \pm 3.35 = [1.87,\,8.57]
-\]
-
-同樣地，預測區間明顯比平均反應值的信賴區間（[3.63, 6.81]）更寬。
-
----
-
-# 結論
-
-比較同樣信賴水準與同樣 \( x_0 \) 時，新觀察值的預測區間 (Prediction Interval) 一定比平均反應值的信賴區間 (Confidence Interval for the Mean Response) 更寬。  
-這是因為預測區間除了考慮迴歸線估計的不確定性外，還包含單筆新觀察值本身的變異性。
+比較同樣信賴水準與同樣 $x_0$時，新觀察值的預測區間 (Prediction Interval) 一定比平均反應值的信賴區間 (Confidence Interval for the Mean Response) 更寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含單筆新觀察值本身的變異性。
