--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -36,7 +36,7 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
    
 6. 信賴區間半徑 (誤差範圍)： $t \cdot s \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
 
-**信賴區間：** $2.374 \pm 1.0998 = [1.2742\, 3.4738]$
+**信賴區間：** $2.374 \pm 1.0998 = [1.274\, 3.474]$
 
 
 **（二）預測區間 (Prediction Intervals for a Particular Value of y)**  
@@ -60,3 +60,6 @@ Ans:
 結論
 
 比較同樣信賴水準與同樣 $x_0$時，新觀察值的預測區間 (Prediction Interval) 一定比平均反應值的信賴區間 (Confidence Interval for the Mean Response) 更寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含單筆新觀察值本身的變異性。
+
+![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
+
