--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -22,7 +22,7 @@ Ans:
 
 2. $\sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
 
-3. 殘差變異估計： $s^2 = \frac{24}{8} = 3 \implies s = \sqrt{3} \approx 1.732$
+3. 殘差變異估計MSE： $s^2 = \frac{24}{8} = 3 \implies s = \sqrt{3} \approx 1.732$
 
 4. 預測平均值： $\hat{y}_0 = \hat{y}(5) = 0.074 + 0.46 \times 5 = 2.374$
 
