--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -20,21 +20,21 @@ Ans:
 
 1. $\bar{x} = \frac{\sum x_i}{n} = \frac{59}{10} = 5.9$
 
-2. $\sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
+2. $S_{xx} = \sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
 
-3. 殘差變異估計MSE： $s^2 = \frac{24}{8} = 3 \implies s = \sqrt{3} \approx 1.732$
+3. 殘差變異估計： $MSE = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
 
-4. 預測平均值： $\hat{y}_0 = \hat{y}(5) = 0.074 + 0.46 \times 5 = 2.374$
-
-5. 計算信賴區間的標準誤差項：
+4. 計算信賴區間的標準誤差項：
 
 $\sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2}}$
    
 $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
 $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx 0.3414$
-   
-6. 信賴區間半徑 (誤差範圍)： $t \cdot s \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+
+5. 信賴區間半徑 (誤差範圍)： $t \cdot \sqrt{MSE} \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+
+6. 預測平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
 
 **信賴區間：** $2.374 \pm 1.0998 = [1.274\, 3.474]$
 
@@ -46,16 +46,16 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 
 Ans:
 
-相同資料： $n=10, s=1.732, t_{0.05,8}=1.860, \hat{y}_0=2.374$ (同題3)
+相同資料： $n=10, s=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
 
 預測區間的公式在標準誤差項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
 
 前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
-預測區間半徑： $t \cdot s \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.40$
+預測區間半徑： $t \cdot \sqrt{MSE} \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
 
-**預測區間：** $2.374 \pm 3.40 = [-1.026\, 5.774]$(比平均反應值的信賴區間[1.274, 3.474]寬)
+**預測區間：** $2.374 \pm 3.404 = [-1.030\, 5.778]$(比平均反應值的信賴區間[1.274, 3.474]寬)
 
 結論
 
