--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -7,10 +7,10 @@
 ![image](https://github.com/user-attachments/assets/4f7d09c5-4843-4500-8e57-c08d8bce4bac)
 
 
-**（一）平均值反應的信賴區間 (Confidence Intervals for the Average Value of y)**  
-利用以下給定的資訊，在 $x = x_0$ 時，求出平均 $y$ 值的信賴區間。  
+**（一）平均值的信賴區間 (Confidence Intervals for the Average Value of y)**  
+利用以下給定的資訊，在 $x = x_0$ 時，求出平均值 $y$的信賴區間。  
 
-3. 給定 $n = 10$ , $\text{SSE} = 24$ ,  $\sum{x_i} = 59$ , $\sum{x_i^2} = 397$ ，迴歸方程為 $\hat{y} = 0.074 + 0.46x$ , 欲在 $x_0 = 5$ 時求出 90% 的平均反應值信賴區間。
+3. 給定 $n = 10$ , $\text{SSE} = 24$ ,  $\sum{x_i} = 59$ , $\sum{x_i^2} = 397$ ，迴歸方程為 $\hat{y} = 0.074 + 0.46x$ , 欲在 $x_0 = 5$ 時求出 90% 的平均值信賴區間。
 
 Ans:
 
@@ -22,9 +22,9 @@ Ans:
 
 2. $S_{xx} = \sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
 
-3. 殘差變異估計： $MSE = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
+3. $MSE = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
 
-4. 計算信賴區間的標準誤差項：
+4. 標準誤：
 
 $\sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2}}$
    
@@ -32,7 +32,7 @@ $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
 $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx 0.3414$
 
-5. 信賴區間半徑 (誤差範圍)： $t \cdot \sqrt{MSE} \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+5. 誤差範圍： $t \cdot \sqrt{MSE} \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
 
 6. 預測平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
 
@@ -40,7 +40,7 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 
 
 **（二）預測區間 (Prediction Intervals for a Particular Value of y)**  
-利用上題 3–4 相同的資料，對於在 $x = x_0$ 下某新觀察值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均反應值的信賴區間之寬度。  
+利用上題 3–4 相同的資料，對於在 $x = x_0$ 下特別值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均值的信賴區間之寬度。  
 
 5. 使用題 3 的資料，在 $x_0 = 5$ 時找出 90% 預測區間。  
 
@@ -48,18 +48,18 @@ Ans:
 
 相同資料： $n=10, s=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
 
-預測區間的公式在標準誤差項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
+預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
 
 前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
-預測區間半徑： $t \cdot \sqrt{MSE} \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
+誤差範圍： $t \cdot \sqrt{MSE} \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
 
-**預測區間：** $2.374 \pm 3.404 = [-1.030\, 5.778]$(比平均反應值的信賴區間[1.274, 3.474]寬)
+**預測區間：** $2.374 \pm 3.404 = [-1.030\, 5.778]$(比平均值的信賴區間[1.274, 3.474]寬)
 
 結論
 
-比較同樣信賴水準與同樣 $x_0$時，新觀察值的預測區間 (Prediction Interval) 一定比平均反應值的信賴區間 (Confidence Interval for the Mean Response) 更寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含單筆新觀察值本身的變異性。
+比較同樣信賴水準與同樣 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
 
