--- a/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
@@ -1,1 +1,5 @@
 
+![image](https://github.com/user-attachments/assets/87b59b65-bda6-47d4-9521-84133caa35a2)  
+![image](https://github.com/user-attachments/assets/7ae644d7-8b67-4353-8012-a6e1c03744d0)
+
+![image](https://github.com/user-attachments/assets/e71a7fd1-ed06-422a-bcc4-68643a5be3cf)
