--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -39,7 +39,7 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 **信賴區間：** $2.374 \pm 1.0998 = [1.274\, 3.474]$
 
 
-**（二）預測區間 (Prediction Intervals for a Particular Value of y)**  
+**（二）特別值的預測區間 (Prediction Intervals for a Particular Value of y)**  
 利用上題 3–4 相同的資料，對於在 $x = x_0$ 下特別值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均值的信賴區間之寬度。  
 
 5. 使用題 3 的資料，在 $x_0 = 5$ 時找出 90% 預測區間。  
