--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -24,7 +24,7 @@ Ans:
 
 3. $MSE = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
 
-4. 標準誤：
+4. 標準誤SE：
 
 $\sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2}}$
    
@@ -32,7 +32,7 @@ $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
 $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx 0.3414$
 
-5. 誤差範圍： $t \cdot \sqrt{MSE} \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+5. 誤差範圍： $t \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
 
 6. 預測平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
 
@@ -53,7 +53,7 @@ Ans:
 前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
-誤差範圍： $t \cdot \sqrt{MSE} \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
+誤差範圍： $t \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
 
 **預測區間：** $2.374 \pm 3.404 = [-1.030\, 5.778]$(比平均值的信賴區間[1.274, 3.474]寬)
 
