--- a/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
@@ -1,1 +1,4 @@
 
+![image](https://github.com/user-attachments/assets/ac0b9f85-f054-49c8-b595-5739b6052a08)  
+![image](https://github.com/user-attachments/assets/08de4268-9fc9-444f-9ad8-7b20f505eab2)
+
