--- a/HW1207/10_蔡佳媛/CH12.05_Q09.10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q09.10_10_Cathy.md
@@ -1,1 +1,2 @@
-
+![image](https://github.com/user-attachments/assets/025eb138-5823-48ac-bcc2-988217a7fb6a)  
+![image](https://github.com/user-attachments/assets/63df3ce2-895b-4991-8d69-34541c63e69c)
