--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -46,7 +46,7 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 
 Ans:
 
-相同資料： $n=10, s=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
+相同資料： $n=10, MSE=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
 
 預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
 
@@ -59,7 +59,7 @@ Ans:
 
 結論
 
-比較同樣信賴水準與同樣 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
+比較同樣信賴水準(90%)與同樣 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
 
