--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -59,7 +59,7 @@ Ans:
 
 結論
 
-比較同樣信賴水準(90%)與同樣 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
+比較相同信賴水準(90%)與相同 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
 
