--- a/HW1109/HW1109Q01.md
+++ b/HW1109/HW1109Q01.md
@@ -31,3 +31,4 @@ P( $\bar{x} = 21.5) = \frac{1}{6} = 0.1667$
 ![7000338D-F857-482B-82F3-DEBBEC6A74FA](https://github.com/user-attachments/assets/8529e706-9db1-470c-b4c3-2f4c74bc8ebc)
 
 
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
