--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -4,4 +4,18 @@
 
 ![image](https://github.com/user-attachments/assets/ee2e2243-c045-46e6-a922-1c2cf8371d7c)
 
-## 由題目得知：
+## 由題目得知：達·文西（1452-1519）曾畫過一幅人類的素描，並指出一個人以雙臂伸展成「T」字形的寬度，大致上等於這個人的身高。為了驗證這個說法，我們測量了八個人的數據。
+
+## a. 繪製臂展和身高的散佈圖。請在水平軸和垂直軸上使用相同的刻度。描述這兩個變數之間的關係。
+>
+>![image](https://github.com/user-attachments/assets/406e9f2c-472c-4038-ae34-2a3275c2ee60)
+>
+>從這些數據中，我們可以觀察到：臂展與身高之間呈現出一種正向的關聯，即臂展較長的人通常也身高較高。
+
+## b. 若達文西的說法正確，即一個人的臂展與身高大致相等，那麼回歸線的斜率應該是多少？
+
+## c. 計算回歸線，用於根據一個人的臂展預測身高。斜率 b 的值是否證實了你在 b 部分的結論？
+
+## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
+
+
