--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -10,9 +10,11 @@
 >
 >![image](https://github.com/user-attachments/assets/406e9f2c-472c-4038-ae34-2a3275c2ee60)
 >
->從這些數據中，我們可以觀察到：臂展與身高之間呈現出一種正向的關聯，即臂展較長的人通常也身高較高。
+>從這些數據中，我們可以觀察到：臂展與身高之間呈現出一種正比例的關係，即臂展較長的人通常也身高較高。
 
 ## b. 若達文西的說法正確，即一個人的臂展與身高大致相等，那麼回歸線的斜率應該是多少？
+>
+>若達文西的說法是正確的，意思是臂展（Armspan）與身高（Height）之間有正比例的關係，即臂展的長度大約等於身高，這樣>在迴歸分析中，斜率（slope）應該接近 1。
 
 ## c. 計算回歸線，用於根據一個人的臂展預測身高。斜率 b 的值是否證實了你在 b 部分的結論？
 
