--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -18,6 +18,10 @@
 
 ## c. 計算回歸線，用於根據一個人的臂展預測身高。斜率 b 的值是否證實了你在 b 部分的結論？
 
+y 代表預測的身高（Height），
+x 代表臂展（Armspan），
+
+
 ## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
 
 
