--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -17,9 +17,32 @@
 >若達文西的說法是正確的，意思是臂展（Armspan）與身高（Height）之間有正比例的關係，即臂展的長度大約等於身高，這樣>在迴歸分析中，斜率（slope）應該接近 1。
 
 ## c. 計算回歸線，用於根據一個人的臂展預測身高。斜率 b 的值是否證實了你在 b 部分的結論？
-
-y 代表預測的身高（Height），
-x 代表臂展（Armspan），
+>
+>y 代表預測的身高（Height），x 代表臂展（Armspan），
+>
+>$\sum x = 172 + 158 + 165 + 176 + 172 +175 + 157 + 153 = 1328 $
+>
+>$\sum y = 175 + 157 + 165 + 177 + 170 + 170 + 160 +157 = 1331 $
+>
+>$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>
+>$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>
+>$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>
+>$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>
+>$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
+>
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
+>							
+>截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
+>						
+>least-square line : $$\hat{y} = 3 + 1.2x $$
 
 
 ## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
