--- a/HW1109/HW1109Q05.md
+++ b/HW1109/HW1109Q05.md
@@ -23,3 +23,5 @@ b. 求每天從三根香蕉攝取的鉀總量超過 1300 毫克的概率
 P ( T > 1300 ) = P ( z > $$\frac{1300-\mu}{\sigma})$$
 
 = P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9332 = 0.0668
+
+reviewed by 黃馨霈 20241114 $\textbf{\textcolor{red}{score: 90}}$ P ( z > 1.51 ) = 1 - 0.9345
