--- a/HW1109/HW1109Q06.md
+++ b/HW1109/HW1109Q06.md
@@ -35,4 +35,5 @@
 >### $區間 0.44 < \hat{p} < 0.61 的機率為$
 >
 >### $P (0.44 < \hat{p} < 0.61 ) = 0.975 - 0.1423 = 0.8327$
- 
+
+ reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
