--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -24,7 +24,7 @@
 >
 >$\sum y = 175 + 157 + 165 + 177 + 170 + 170 + 160 +157 = 1331 $
 >
->$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>$\sum {x^2} = 172^2 + 158^2 + 165^2 + 176^2 + 172^2 + 175^2 + 157^2 + 153^2= 10 $
 >
 >$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
 >
