--- a/HW1109/HW1109Q07.md
+++ b/HW1109/HW1109Q07.md
@@ -21,3 +21,5 @@ $\frac{\hat{p}-p}{\sqrt{\frac{pq}{n}}} \rightarrow Z$
 $P(\hat{p} \gt 0.8) = 1 - P( z \lt \frac{0.8-0.7}{0.0648} \approx 1 - P( z \lt 1.54) = 1 - 0.9382 = 0.0618$
 
 ![image](https://github.com/user-attachments/assets/9642b530-9c1d-4ee0-b7b4-99045ae4c0c7)
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
