--- a/HW1109/HW1109Q08.md
+++ b/HW1109/HW1109Q08.md
@@ -33,3 +33,5 @@ P(0.42 ≤ $\hat{p}$ ≤ 0.45) = P(Z < -0.4008) - P(Z < -1.002) = 0.3446 - 0.158
 d. What might you conclude about p if the observed sample proportion were less than 0.30?
 
 P(Z < -3.404) = 0.0003
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
