--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -24,9 +24,9 @@
 >
 >$\sum y = 175 + 157 + 165 + 177 + 170 + 170 + 160 +157 = 1331 $
 >
->$\sum {x^2} = 172^2 + 158^2 + 165^2 + 176^2 + 172^2 + 175^2 + 157^2 + 153^2= 10 $
+>$\sum {x^2} = 172^2 + 158^2 + 165^2 + 176^2 + 172^2 + 175^2 + 157^2 + 153^2= 221016 $
 >
->$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>$\sum {y^2} = 175^2 + 157^2 + 165^2 + 177^2 + 170^2 + 170^2 + 160^2 +157^2 = 221877 $
 >
 >$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
 >
