--- a/HW1109/HW1109Q10.md
+++ b/HW1109/HW1109Q10.md
@@ -60,3 +60,5 @@ $\hat{p}$±ME=0.653±0.085
 
 This gives us the confidence interval:
 [0.653−0.085,0.653+0.085]=[0.568,0.738]
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
