--- a/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
@@ -1,2 +1,11 @@
 
 ![image](https://github.com/user-attachments/assets/da5367ec-b13b-4d01-b478-962a0a002023)
+
+
+|       |   1  |   2  |  3  |  4  |  5  |Total| AVG |  
+|-------|------|------|-----|-----|-----|-----|-----|  
+|  $x$  |  -2  |  -1  |  0  |  1  |  2  |   0 |  0  |  
+|  $y$  |   1  |   1  |  3  |  5  |  5  |  15 |  3  |  
+| $x^2$ |   4  |   1  |  0  |  1  |  4  |  10 |  2  |  
+| $y^2$ |   1  |   1  |  9  | 25  | 25  |  61 | 12.2|  
+|  $xy$ |  -2  |  -1  |  0  |  5  | 10  |  12 | 2.4 |  
