--- a/HW1109/HW1109Q11.md
+++ b/HW1109/HW1109Q11.md
@@ -29,5 +29,5 @@ In repeated sampling,about 95% intervals constructed this way will cover the tru
 ![image](https://github.com/user-attachments/assets/e3fa4fe1-680a-49dc-9d8d-89736037183a)
 ![image](https://github.com/user-attachments/assets/2c433333-681a-44c4-8729-e29b55cc9abe)
 
-
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
 
