--- a/HW1109/HW1109Q12.md
+++ b/HW1109/HW1109Q12.md
@@ -26,3 +26,5 @@ The width fo the confidence interval = 2 $\times$ 2.58 = 5.16
 高信賴係數（如 99%）：區間更寬，但誤差範圍變大,因為Margin Error 變大。
 
 低信賴係數（如 90%）：區間較窄，誤差範圍變小，因為Margin Error 變小。
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
