--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -28,7 +28,7 @@
 >
 >$\sum {y^2} = 175^2 + 157^2 + 165^2 + 177^2 + 170^2 + 170^2 + 160^2 +157^2 = 221877 $
 >
->$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>$\sum xy = (172)(175) + (158)(157) + (165)(165) + (176)(177) + (172)(170) + (175)(170) + (157)(160) + (153)(157) = 221414 $
 >
 >$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
 >
