--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -30,7 +30,7 @@
 >
 >$\sum xy = (172)(175) + (158)(157) + (165)(165) + (176)(177) + (172)(170) + (175)(170) + (157)(160) + (153)(157) = 221414 $
 >
->$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>$\bar{x} = \frac{172+158+165+176+172+175+157+153}{8} = 166 $
 >
 >$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
 >
