--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -32,7 +32,7 @@
 >
 >$\bar{x} = \frac{172+158+165+176+172+175+157+153}{8} = 166 $
 >
->$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>$\bar{y} = \frac{175+157+165+177+170+170+160+157}{8} = 166.375 $
 >
 >$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
 >
