--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -36,4 +36,4 @@ Q10.  雙尾檢定，顯著水準 α=0.02，P=0.008*2 小於 α=0.02 → P=0.008
 單邊的 α=0.01，左尾的拒絕區為小於-2.33，右尾的拒絕區為大於2.33
 拒絕區 : 2.33 < Z < -2.33
 
-reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 90}}$ Q10拒絕域 : 2.33 < Z or Z < -2.33. If the observed value of the test statistic is z = 2.41, the null hypothesis H0 will be rejected at the 5% level.
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 90}}$ Q10拒絕域 : 2.33 < Z or Z < -2.33. If the observed value of the test statistic is z = -2.41, the null hypothesis H0 will be rejected at the 5% level.
