--- a/HW1123/HW1123Q02.md
+++ b/HW1123/HW1123Q02.md
@@ -68,4 +68,4 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 
 Ans: Statistically Significant
 
-
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
