--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -42,8 +42,7 @@
 >							
 >截距: $$a= \bar{y}-b*\bar{x} = 166.375 - (0.8239)(166) = 29.6 $$							
 >						
->least-square line : $$\hat{y} = 29.6 + 0.82x $$
-
+>regression line : $$\hat{y} = 29.6 + 0.82x $$
 
 ## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
 
