--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -61,3 +61,5 @@ b.
 p-value約為0.0034，小於5%的顯著水準。
 
 綜合以上顯著證據（significant evidence）皆拒絕H₀，因此該診所3個月大女baby的平均體重可能低於5.86公斤(H₁)。
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
