--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -43,7 +43,14 @@
 >截距: $$a= \bar{y}-b*\bar{x} = 166.375 - (0.8239)(166) = 29.6 $$							
 >						
 >regression line : $$\hat{y} = 29.6 + 0.82x $$
+>
+>![image](https://github.com/user-attachments/assets/5c508757-e067-4de1-ab74-4bdc48230199)
 
 ## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
-
+>
+>若一個人的臂展為 157 公分，則代入迴歸方程式中： $$\hat{y} = 29.6 + 0.82x $$ 
+>
+>$$\hat{y} = 29.6 + 0.82 (157) = 158.34
+>
+>因此，根據這條迴歸線，預測這個人的身高約為 158.34 公分。
 
