--- a/HW1123/HW1123Q05.md
+++ b/HW1123/HW1123Q05.md
@@ -11,3 +11,4 @@ $Z = \frac{\bar{X}-\mu_0}{s/\sqrt{n}}$
 $p-value$ = 2P(Z> |-3.75|) $\approx$ 0. 
 
 Reject $H_0$. 
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
