--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -50,7 +50,7 @@
 >
 >若一個人的臂展為 157 公分，則代入迴歸方程式中： $$\hat{y} = 29.6 + 0.82x $$ 
 >
->$$\hat{y} = 29.6 + 0.82 (157) = 158.34
+>$$\hat{y}$$ = 29.6 + 0.82 (157) = 158.34
 >
 >因此，根據這條迴歸線，預測這個人的身高約為 158.34 公分。
 
