--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -60,3 +60,4 @@ c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 
 
 d. 因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
 
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
