--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -39,7 +39,7 @@ $$
 Since **P-value > $\alpha$ = 0.05**, we fail to reject the null hypothesis, and there is insufficient evidence to support that **P < 0.3**.
 
 
-
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
 
 Github語法大全:
 https://hackmd.io/@eMP9zQQ0Qt6I8Uqp2Vqy6w/SyiOheL5N/%2FBVqowKshRH246Q7UDyodFA?type=book#%E5%AD%97%E9%AB%94%E5%A4%A7%E5%B0%8F
