--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -4,6 +4,8 @@
 
 ![image](https://github.com/user-attachments/assets/ee2e2243-c045-46e6-a922-1c2cf8371d7c)
 
+![image](https://github.com/user-attachments/assets/87f4c1d2-b1bb-49ec-8494-104deb899f89)
+
 ## 由題目得知：達·文西（1452-1519）曾畫過一幅人類的素描，並指出一個人以雙臂伸展成「T」字形的寬度，大致上等於這個人的身高。為了驗證這個說法，我們測量了八個人的數據。
 
 ## a. 繪製臂展和身高的散佈圖。請在水平軸和垂直軸上使用相同的刻度。描述這兩個變數之間的關係。
