--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -53,3 +53,4 @@
 >
 >*The 𝑝-value approach leads to the same conclusion: There is siganificans evidence to suggest that more than 50% of Americans would not ride in a driverless car.*
 >
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 80}}$ $p$-value=P(z>2.68)=1-0.9963=0.0037<0.05.
