--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -38,5 +38,5 @@ $$
    - p-value (0.0384) <  $\alpha (0.05)$ ，拒絕 Ho
    - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho的假設，可能降低小企業失敗率。
 
-
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
 
