--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -38,3 +38,5 @@ P-Value = 2*p(Z>|-3.93|) <  $\alpha = 0.01$
 
 (5) 
 結論：拒絕 $$H_0$$ 。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
