--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -98,6 +98,6 @@ p-value=1−0.999997=0.000003 < α=0.05
 P 值 ≈0.000003 是一個極小的值，
 因此在significance level 顯著水準 $\alpha = 0.05$下, 拒絕 $H_0$，所以我們認為檢測計畫有效，提高了存活率。
 
-
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
 
 
