--- a/HW1123/HW1123Q12.md
+++ b/HW1123/HW1123Q12.md
@@ -25,3 +25,4 @@ $-t_{9,0.01} = -2.821$
   
 
 ![CH10 01_Q07-table1](https://github.com/user-attachments/assets/b593af8f-f2f6-4355-9acb-b7b2d88f0e57)
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
