--- a/HW1123/HW1123Q14.md
+++ b/HW1123/HW1123Q14.md
@@ -19,3 +19,5 @@ sol:
 計算90%信賴區間 [28.7 - 1.746 * $\frac{8.6}{\sqrt{17}}$ , 28.7 + 1.746 * $\frac{8.6}{\sqrt{17}}$]
 
 知90%信賴區間為 [25.0582 , 32.3418] 
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
