--- a/HW1207/08_蕭宇辰/CH12.01_Q17.md
+++ b/HW1207/08_蕭宇辰/CH12.01_Q17.md
@@ -1,8 +1,9 @@
 ![CH12 01_Q17](https://github.com/user-attachments/assets/a60ced1c-29fd-42be-981b-b1c08fb930e5)
 
-案題意，使用習題 17-18 中給定的數據。計算平方和 Sxx和交叉積 Sxy。
+按題意，使用習題 17-18 中給定的數據。計算平方和 Sxx和交叉積 Sxy。
 
 找出數據的最小平方法直線。繪製點和擬合線到同一張圖上，並判斷該線是否能很好地擬合數據點。
+---
 
 X=-2 -1  0  1  2
 
