--- a/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
@@ -6,6 +6,15 @@
 |-------|------|------|-----|-----|-----|-----|-----|  
 |  $x$  |  -2  |  -1  |  0  |  1  |  2  |   0 |  0  |  
 |  $y$  |   1  |   1  |  3  |  5  |  5  |  15 |  3  |  
-| $x^2$ |   4  |   1  |  0  |  1  |  4  |  10 |  2  |  
-| $y^2$ |   1  |   1  |  9  | 25  | 25  |  61 | 12.2|  
-|  $xy$ |  -2  |  -1  |  0  |  5  | 10  |  12 | 2.4 |  
+| $x^2$ |   4  |   1  |  0  |  1  |  4  |  10 |  
+| $y^2$ |   1  |   1  |  9  | 25  | 25  |  61 |  
+|  $xy$ |  -2  |  -1  |  0  |  5  | 10  |  12 |  
+
+
+
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 10 - 10 \times 0 = 10$
+
+$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2$  
+
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$
