--- a/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
@@ -13,8 +13,10 @@
 
 
 $S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
-$S_{xx} = 10 - 10 \times 0 = 10$
+$S_{xx} = 10 - 5 \times 0 = 10$  
 
 $S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2$  
+$S_{yy} = 61 - 5 \times 9 = 16$  
 
 $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$
+$S_{xy} = 12 - 5 \times 0 \times 15 = 12$  
