--- a/HW1207/08_蕭宇辰/CH12.02_Q04.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q04.md
@@ -1,7 +1,10 @@
 
 ![CH12 02_Q04](https://github.com/user-attachments/assets/3a1dccbb-228c-4002-8e08-7be08090dfb7)
 
-$df_{reg}$ = 1
+在簡單線性回歸分析中，根據方差分析表（ANOVA），填入缺失的項目，按題意填入缺失項：
+---
+
+$df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
 
 $df_{error}$ = 19-1 =18
 
