--- a/HW1123/20_柯伊馨/CH10.02_Q20.md
+++ b/HW1123/20_柯伊馨/CH10.02_Q20.md
@@ -1,3 +1,5 @@
 ![image](https://github.com/user-attachments/assets/3398416b-710c-46f1-801d-a4ac7322b51c)
 
 ![image](https://github.com/user-attachments/assets/dd0714cd-c48f-44a5-a213-e468dea84f5e)
+
+![image](https://github.com/user-attachments/assets/894a498f-5540-48e1-97eb-f4d1c16f35a2)
