--- a/HW1123/20_柯伊馨/CH10.02_Q21.md
+++ b/HW1123/20_柯伊馨/CH10.02_Q21.md
@@ -1,2 +1,3 @@
 ![image](https://github.com/user-attachments/assets/759f642d-f99a-44d5-99be-e7702b1db9e1)
 
+![image](https://github.com/user-attachments/assets/5d543d8c-1a1a-4546-a71b-4e052a91ebd4)
