--- a/HW1207/20_柯伊馨/CH12.01_Q22.md
+++ b/HW1207/20_柯伊馨/CH12.01_Q22.md
@@ -1,1 +1,3 @@
+![image](https://github.com/user-attachments/assets/30564d86-00d7-4e90-95f5-5112c5b6a73f)
 
+![image](https://github.com/user-attachments/assets/00e1143a-d81d-4c05-83dc-424b7a250e99)
