--- a/HW1207/20_柯伊馨/CH12.02_Q04.md
+++ b/HW1207/20_柯伊馨/CH12.02_Q04.md
@@ -1,1 +1,5 @@
+![image](https://github.com/user-attachments/assets/8d53f5bf-f1a5-4b2a-9ee6-2d1f59b36cbc)
+
+在簡單線性回歸分析中，根據方差分析表（ANOVA），填入缺失的項目，按題意填入缺失項：
+
 
