--- a/HW1207/20_柯伊馨/CH12.01_Q17.md
+++ b/HW1207/20_柯伊馨/CH12.01_Q17.md
@@ -1,2 +1,3 @@
 ![image](https://github.com/user-attachments/assets/f187af92-89c1-4c57-a358-5b3d1e6c3ae4)
 
+![image](https://github.com/user-attachments/assets/c2e6e506-f3dc-4ab7-adf2-a22fff388377)
