--- a/HW1207/20_柯伊馨/CH12.01_Q22.md
+++ b/HW1207/20_柯伊馨/CH12.01_Q22.md
@@ -1,3 +1,9 @@
 ![image](https://github.com/user-attachments/assets/30564d86-00d7-4e90-95f5-5112c5b6a73f)
 
 ![image](https://github.com/user-attachments/assets/00e1143a-d81d-4c05-83dc-424b7a250e99)
+
+![image](https://github.com/user-attachments/assets/8db7ed1b-6f1f-4a07-8cb8-4c40e2a2b7ea)
+
+若臂展大約等於身高，則x=y，回歸線的斜率應為1
+
+![image](https://github.com/user-attachments/assets/8cdfb084-059f-4e96-b83d-fb758b15a13c)
