--- a/HW1207/20_柯伊馨/CH12.02_Q04.md
+++ b/HW1207/20_柯伊馨/CH12.02_Q04.md
@@ -2,4 +2,5 @@
 
 在簡單線性回歸分析中，根據方差分析表（ANOVA），填入缺失的項目，按題意填入缺失項：
 
+![image](https://github.com/user-attachments/assets/9f10c3c6-13f4-41d6-8260-028b9d805d6b)
 
