--- a/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
@@ -25,3 +25,5 @@ $b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$
 $a = \bar{y} - b \times \bar{x}x = 3 - 1.2 \times 0 = 3$  
 
 Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
+
+![image](https://github.com/user-attachments/assets/56067f39-794e-4794-b0c4-19cb0e253591)
