--- a/HW1207/20_柯伊馨/CH12.02_Q06.md
+++ b/HW1207/20_柯伊馨/CH12.02_Q06.md
@@ -1,2 +1,3 @@
 ![image](https://github.com/user-attachments/assets/9bd6ae2b-7f48-4ce7-b27f-5088ba43a64c)
 
+![image](https://github.com/user-attachments/assets/23cbf452-ff2b-4854-811c-546f0d32b360)
