--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -2,7 +2,7 @@
 
 ![image](https://github.com/user-attachments/assets/36129b41-c363-4ad0-a215-e8d537248006)
 
-## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{xx} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線與這些資料匹配嗎？
+## 由題目得知：使用題中給的數字，計算平方和 $S_{xx}$ 與交叉積 $S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線與這些資料匹配嗎？
 >
 >$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
 >
