--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -29,4 +29,8 @@
 >least-square line : $$\hat{y} = 3 + 1.2x $$
 >
 >![image](https://github.com/user-attachments/assets/2d152875-38b3-4e72-a87e-daac3325c5fe)
+>
+>![image](https://github.com/user-attachments/assets/d5007e29-cc47-47a7-afcf-672d827c5ea3)
+
+
 
