--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -31,24 +31,22 @@
 >![image](https://github.com/user-attachments/assets/2d152875-38b3-4e72-a87e-daac3325c5fe)
 >
 >![image](https://github.com/user-attachments/assets/d5007e29-cc47-47a7-afcf-672d827c5ea3)
-
 ---
-
-X=-2 -1  0  1  2
-
-Y= 1  1  3  5  5
-
-$\bar{x}$ = 0
-
-$\bar{y}$ = 3
-
-$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4+1+0+1+4 =10
-
-$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
-
-b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
-
-a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
-
-帶入y=a+bx後，故知，least-squares line 是 y=3 + 1.2 *x
+>X = -2 -1  0  1  2
+>
+>Y = 1  1  3  5  5
+>
+>$\bar{x}$ = 0
+>
+>$\bar{y}$ = 3
+>
+>$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4 + 1 + 0 + 1 + 4 = 10
+> 
+>$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 4 + 2 + 0 + 2 + 4 = 12
+>
+>b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
+>
+>a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
+>
+>帶入 y = a + b x 後，故知，least-squares line 是 $$\hat{y} = 3 + 1.2x $$
 
