--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -12,3 +12,50 @@
 
 ![image](https://github.com/user-attachments/assets/b8dd7108-115d-4520-8600-a4a7c1ae7011)
 
+## 由題目得知：使用題中給的數字，計算平方和 $S_{xx}$ 與交叉積 $S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線與這些資料匹配嗎？
+>
+>$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
+>
+>$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
+>
+>$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>
+>$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>
+>$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>
+>$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>
+>$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
+>
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
+>							
+>截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
+>						
+>least-square line : $$\hat{y} = 3 + 1.2x $$
+>
+>![image](https://github.com/user-attachments/assets/2d152875-38b3-4e72-a87e-daac3325c5fe)
+
+>![image](https://github.com/user-attachments/assets/d5007e29-cc47-47a7-afcf-672d827c5ea3)
+>
+>X = -2 -1  0  1  2
+>
+>Y = 1  1  3  5  5
+>
+>$\bar{x}$ = 0
+>
+>$\bar{y}$ = 3
+>
+>$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4 + 1 + 0 + 1 + 4 = 10
+> 
+>$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 4 + 2 + 0 + 2 + 4 = 12
+>
+>b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
+>
+>a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
+>
+>帶入 y = a + b x 後，故知，least-squares line 是 $$\hat{y} = 3 + 1.2x $$
