--- a/HW1207/09_沈佩如/CH12.02_Q04.md
+++ b/HW1207/09_沈佩如/CH12.02_Q04.md
@@ -2,4 +2,7 @@
 
 ![image](https://github.com/user-attachments/assets/0b4e5c02-91d5-493c-a640-9b59d686ac11)
 
-## 由題目得知：
+## 由題目得知：在簡單線性回歸分析中，根據方差分析表（ANOVA），填入空格的值
+
+![image](https://github.com/user-attachments/assets/3a8c4178-8689-4116-aa37-cd07ab62ad11)
+
