--- a/HW1207/09_沈佩如/CH12.02_Q04.md
+++ b/HW1207/09_沈佩如/CH12.02_Q04.md
@@ -8,10 +8,10 @@
 
 $df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
 
-$df_{error}$ = 19-1 =18
+$df_{error}$ = 19 - 1 = 18
 
-SSE = 12.5-4.3 = 8.2
+SSE = 12.5 - 4.3 = 8.2
 
-MSR = SSR / $df_{reg}$ = 4.3 / 1 =4.3
+MSR = SSR / $df_{reg}$ = 4.3 / 1 = 4.3
 
 MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
