--- a/HW1207/09_沈佩如/CH12.02_Q04.md
+++ b/HW1207/09_沈佩如/CH12.02_Q04.md
@@ -3,15 +3,15 @@
 ![image](https://github.com/user-attachments/assets/0b4e5c02-91d5-493c-a640-9b59d686ac11)
 
 ## 由題目得知：在簡單線性回歸分析中，根據方差分析表（ANOVA），填入空格的值
-
-![image](https://github.com/user-attachments/assets/3a8c4178-8689-4116-aa37-cd07ab62ad11)
-
-$df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
-
-$df_{error}$ = 19 - 1 = 18
-
-SSE = 12.5 - 4.3 = 8.2
-
-MSR = SSR / $df_{reg}$ = 4.3 / 1 = 4.3
-
-MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
+>
+>$df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
+>
+>$df_{error}$ = 19 - 1 = 18
+>
+>SSE = 12.5 - 4.3 = 8.2
+>
+>MSR = SSR / $df_{reg}$ = 4.3 / 1 = 4.3
+>
+>MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
+>
+>![image](https://github.com/user-attachments/assets/3a8c4178-8689-4116-aa37-cd07ab62ad11)
