--- a/HW1207/09_沈佩如/CH12.02_Q04.md
+++ b/HW1207/09_沈佩如/CH12.02_Q04.md
@@ -13,5 +13,5 @@
 >MSR = SSR / $df_{reg}$ = 4.3 / 1 = 4.3
 >
 >MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
->
->![image](https://github.com/user-attachments/assets/3a8c4178-8689-4116-aa37-cd07ab62ad11)
+
+![image](https://github.com/user-attachments/assets/3a8c4178-8689-4116-aa37-cd07ab62ad11)
