--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -23,6 +23,24 @@ $df_{reg}$ = 1
 $df_{error}$ = n-k = 3
 
 $df_{total}$ = n-1 = 4
+
+>$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
+>
+>$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
+>
+>$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>
+>$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>
+>$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>
+>$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>
+>$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
    
 SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 61 - 15*15/5 = 16
 
