--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -42,7 +42,7 @@ $df_{total}$ = n-1 = 4
 >
 >$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
    
-SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 61 - 15*15/5 = 16
+SST = $S_{yy} = \sum {y^2} - \frac{(\sum{y})^2}{n} = 61 - \frac{(15)^2}{5} = 16 $ 
 
 SSR = $S_{xy}^2$ / $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  59.4 - $15^2$ / 5 = 14.4
 
