--- a/HW1207/08_蕭宇辰/CH12.02_Q10.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q10.md
@@ -43,7 +43,7 @@ $df_{total}$ = n-1 = 5
    
 SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
 
-SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  59.4417
+SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
 
 SSE = SST - SSR = 72.22-59.4417 = 12.7783
 
