--- a/HW1207/08_蕭宇辰/CH12.02_Q06.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q06.md
@@ -25,7 +25,7 @@ $df_{total}$ = n-1 = 4
    
 SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 61 - 15*15/5 = 16
 
-SSR = $S_{xy}^2$ / $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  59.4 - $15^2$ / 5 = 14.4
+SSR =  $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4 - $15^2$ / 5 = 14.4
 
 SSE = SST - SSR = 1.6
 
