--- a/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
@@ -36,12 +36,12 @@ $S_{xy} = 221,414 - 8 \times 166 \times 166.375 = 468$
 $b = \frac{S_{xy}}{S_{xx}} = \frac{468}{568} = 0.8239$  
 $a = \bar{y} - b \times \bar{x}x = 166.375 - 0.8239 \times 166 = 29.6076$  
 
-Best fitting line: $\hat{y} = a + bx = 29.6076 + 0.8239x$  
+Regression line: $\hat{y} = a + bx = 29.6076 + 0.8239x$  
 
-The value of the slope is different from the conclusion in part b. Because the height of a person cannot be 0.  
+The value of the slope is different from the conclusion in part b, because the height of a person cannot be 0.  
 
 
 ### d. If a person has an armspan of 157 centimeters, what would you predict the person's height to be?
 
-
+According to regression line: $\hat{y} = 29.6076 + 0.8239x$, the predicted height would be 158.9599 centimeters.    
 
