--- a/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q17_10_Cathy.md
@@ -22,7 +22,7 @@ $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$
 $S_{xy} = 12 - 5 \times 0 \times 15 = 12$  
 
 $b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
-$a = \bar{y} - b \times \bar{x}x = 3 - 1.2 \times 0 = 3$  
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
 
 Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
 
