--- a/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.01_Q22_10_Cathy.md
@@ -3,16 +3,18 @@
 ![image](https://github.com/user-attachments/assets/7ae644d7-8b67-4353-8012-a6e1c03744d0)  
 ![image](https://github.com/user-attachments/assets/e71a7fd1-ed06-422a-bcc4-68643a5be3cf)  
 
+
+
 ### a. Draw a scatterplot for armspan and height. Use the same scale on both the horizontal and vertical axes. Describe the relationship between the two variables.
 
-
-
+![image](https://github.com/user-attachments/assets/9970ee47-6561-419d-9a63-8b1a96057038)
 
 
 
 ### b. If da Vinci is correct, and a person's armspan is roughly the same as the person's height, what should the slope of the regression line be?
 
-If a person's armspan is roughly the same as the person's height, then the slope of the regression line will be 1, which indicating the regression line is $\hat{y}=x$
+The slope of the regression line should be 1, indicating that the regression line has the form $\hat{y}=x$.
+
 
 
 ### c. Calculate the regression line for predicting height based on a person's armspan. Does the value of the slope $b$ confirm your conclusions in part b?
@@ -23,7 +25,6 @@ If a person's armspan is roughly the same as the person's height, then the slope
 | Armspan ($x$) |    172 |    158 |    165 |    176 |    172 |    175 |    157 |   153  |   1,328 | 166     |  
 | Height  ($y$) |    175 |    157 |    165 |    177 |    170 |    170 |    160 |   157  |   1,331 | 166.375 |  
 |      $x^2$    | 29,584 | 24,964 | 27,225 | 30,976 | 29,584 | 30,625 | 24,649 | 23,409 | 221,016 |  
-|      $y^2$    | 30,625 | 24,649 | 27,225 | 31,329 | 28,900 | 28,900 | 25,600 | 24,649 | 221,877 |  
 |      $xy$     | 30,100 | 24,806 | 27,225 | 31,152 | 29,240 | 29,750 | 25,120 | 24,021 | 221,414 |  
 
 
@@ -34,14 +35,15 @@ $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$
 $S_{xy} = 221,414 - 8 \times 166 \times 166.375 = 468$  
 
 $b = \frac{S_{xy}}{S_{xx}} = \frac{468}{568} = 0.8239$  
-$a = \bar{y} - b \times \bar{x}x = 166.375 - 0.8239 \times 166 = 29.6076$  
+$a = \bar{y} - b \times \bar{x} = 166.375 - 0.8239 \times 166 = 29.6076$  
 
 Regression line: $\hat{y} = a + bx = 29.6076 + 0.8239x$  
 
-The value of the slope is different from the conclusion in part b, because the height of a person cannot be 0.  
+The value of the slope differs from the conclusion in part b because the sample data deviates from da Vinci's idealized relationship.  
+
 
 
 ### d. If a person has an armspan of 157 centimeters, what would you predict the person's height to be?
 
-According to regression line: $\hat{y} = 29.6076 + 0.8239x$, the predicted height would be 158.9599 centimeters.    
+According to regression line: $\hat{y} = 29.6076 + 0.8239x$, the predicted height of the person would be 158.9599 centimeters.    
 
