--- a/HW1207/10_蔡佳媛/CH12.02_Q04_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q04_10_Cathy.md
@@ -1,3 +1,13 @@
 
-![image](https://github.com/user-attachments/assets/85bd3b2a-4faf-4b30-be31-60fc5df9dc64)
+![image](https://github.com/user-attachments/assets/85bd3b2a-4faf-4b30-be31-60fc5df9dc64)  
 
+![image](https://github.com/user-attachments/assets/0c3d0f67-f9e1-41c1-b2f9-ed50e3ea80fa)  
+
+|  Source  |  df  |   SS  |    MS    |  
+|----------|------|-------|----------|  
+|Regression| **1**|  4.3  |  **4.3** |  
+|Error     |**18**|**8.2**|**0.4556**|  
+|Total     |  19  | 12.5  |  
+
+n = 20  
+SSE = Total SS - SSR = 12.5 - 4.3 = 8.2  
