--- a/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
@@ -1,2 +1,31 @@
 
-![image](https://github.com/user-attachments/assets/e04830b5-9324-4220-8ab9-f572a2f80b34)
+![image](https://github.com/user-attachments/assets/e04830b5-9324-4220-8ab9-f572a2f80b34)  
+  
+![image](https://github.com/user-attachments/assets/110a1c89-6f87-488f-acc9-1dbbef2317f3)  
+
+
+|       |   1  |   2  |   3  |   4  |   5  | Total | Average |  
+|-------|------|------|------|------|------|-------|---------|  
+|   x   |  -2  |  -1  |   0  |   1  |   2  |   0   |    0    |  
+|   y   |   1  |   1  |   3  |   5  |   5  |   15  |    3    |  
+|  x^2  |   4  |   1  |   0  |   1  |   4  |   10  |    2    |  
+|  y^2  |   1  |   1  |   9  |  25  |  25  |   61  |   12.2  |  
+|   xy  |  -2  |  -1  |   0  |   5  |  10  |   12  |         |
+
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2$  
+Total SS = 61 - 5 $\times 3^2$ = 16 
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$  
+
+S_{xy}
+
+
+
+### ANOVA table  
+
+|   Source   |      df     |   SS   |   MS   |  
+|------------|-------------|--------|--------|  
+| Regression |       1     |        |        |  
+| Error      | n-2 = **3** |        |        |  
+| Total      | n-1 = **4** | **16** |  
+
