--- a/HW1207/08_蕭宇辰/CH12.03_Q09.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q09.md
@@ -22,7 +22,7 @@ $H_0$ : b = 0
 
 $H_a$ : b $\ne$ 0
 
-因 $\frac{(\hat{b}-b)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
 且 $\alpha$ = 0.05
 
@@ -30,7 +30,7 @@ RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
 
 計算統計量
 
-$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (0- 0.0231) / $\sqrt{\frac{0.0004}{340}}$ = 22.2349
+$t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{0.0004}{340}}$ = 22.2349
 
 ( SST = 0.1864， SSR = 0.1812 ，SSE = SST-SSR =0.0051， MSE= SSE /(n-2) = 0.0051 / 14 = 0.0004 )
 
