--- a/HW1207/08_蕭宇辰/CH12.03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q05.md
@@ -16,7 +16,7 @@ $H_0$ : b = 0
 
 $H_a$ : b $\ne$ 0
 
-因 $\frac{(\hat{b}-b)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
 且 $\alpha$ = 0.01
 
@@ -24,7 +24,7 @@ RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
 
 計算統計量
 
-$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (0- 1.2) / $\sqrt{\frac{0.5333}{10}}$ = -1.2 / 0.2309 = -5.1963
+$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
 
 ( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
 
