--- a/HW1207/08_蕭宇辰/CH12.03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q05.md
@@ -1,6 +1,6 @@
 ![CH12 03_Q05](https://github.com/user-attachments/assets/5e31d150-18c9-4409-91a2-c8442091357a)
 
-使用題目中給定的數據，檢驗 y 和 x 之間是否具有線性關係？使用 t 統計量在 1% 顯著水準 下進行檢定。建構回歸斜率的 99% 信賴區間。解釋「99% 置信」的含義。
+使用題目中給定的數據，檢驗 y 和 x 之間是否具有線性關係？使用 t 統計量在 1% 顯著水準 下進行檢定。建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 ---
 
 整理數據
@@ -31,7 +31,7 @@ $t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\f
 統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
 
 
-建構回歸斜率的 99% 信賴區間。解釋「99% 置信」的含義。
+建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 ---
 
 99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
