--- a/HW1207/08_蕭宇辰/CH12.03_Q09.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q09.md
@@ -53,11 +53,11 @@ $F_{state}$ = 494.3926
 已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
 
 
-d. 計算決定係數 $r^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
+d. 計算決定係數 $R^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
 ---
 
-$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
 
-$r^2$ =0.9725 表示這個線性回歸模型解釋了 97% 的總變異，表示模型對數據擬合得非常好，線性模型非常實用
+$R^2$ =0.9725 表示這個線性回歸模型解釋了 97% 的總變異，表示模型對數據擬合得非常好，線性模型非常實用
 
 
