--- a/HW1207/08_蕭宇辰/CH12.05_Q03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.05_Q03_Q05.md
@@ -23,4 +23,4 @@ Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
 
 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1+1/10+0.81/48.9) )}$ =2.374 $\pm$ 3.404
 
-信賴區間為 [-1.0302 , 5.7782 ]
+預測區間為 [-1.0302 , 5.7782 ]
