--- a/HW1207/08_蕭宇辰/CH12.02_Q10.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q10.md
@@ -23,7 +23,7 @@ b. 找出描述 BMI 與收入之間關係的最小平方法直線。
 
 Sxx = 2730.208 ， Sxy = -402.85 ，得 b = -0.1476 a= 32.9144 
 
-least-square line: $\hat_{y}$ = 32.9144 - 0.1476 *x
+least-square line: $\hat{y}$ = 32.9144 - 0.1476 *x
 
 
 c. 建構這個線性回歸的 ANOVA 表格。
