--- a/HW1207/08_蕭宇辰/CH12.01_Q17.md
+++ b/HW1207/08_蕭宇辰/CH12.01_Q17.md
@@ -19,6 +19,6 @@ b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
 
 a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
 
-帶入y=a+bx後，故知，least-squares line 是 y=3 + 1.2 *x ，並繪圖如下
+帶入y=a+bx後，故知，least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
 
 ![image](https://github.com/user-attachments/assets/1a2c6af1-d73e-497c-9685-1138d224e94a)
