--- a/HW1207/08_蕭宇辰/CH12.01_Q22.md
+++ b/HW1207/08_蕭宇辰/CH12.01_Q22.md
@@ -30,7 +30,7 @@ $S_{xy}$ = 468
 
 b = $S_{xy}$ / $S_{xx}$ = 0.8239，a = 29.6003
 
-代入 y= a+bx ，得 y = 29.6003 + 0.8239 * x
+代入 y= a+bx ，得 $\hat{y}$ = 29.6003 + 0.8239 * x
 
 
 
