--- a/HW1207/08_蕭宇辰/CH12.01_Q22.md
+++ b/HW1207/08_蕭宇辰/CH12.01_Q22.md
@@ -37,4 +37,4 @@ b = $S_{xy}$ / $S_{xx}$ = 0.8239，a = 29.6003
 d. 若一個人的臂展為 157 公分，預測此人的身高。
 ---
 
-若 x= 157 則 y = 29.6003+ 0.8239 * 157 = 158.9595
+若 x= 157 則 $\hat{y_0}$ = 29.6003+ 0.8239 * 157 = 158.9595
