--- a/HW1207/08_蕭宇辰/CH12.03_Q07.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q07.md
@@ -8,4 +8,4 @@
 
 $r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{10^2}{16*12}$ = 0.9
 
-$r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異，表示模型對數據擬合得非常好，線性模型非常實用
+$r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異
