--- a/HW1207/08_蕭宇辰/CH12.03_Q10.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q10.md
@@ -36,4 +36,4 @@ c. 建構斜率的 95% 信賴區間。
 d. 計算決定係數 $R^2$，並解釋其意義。
 ---
 
-由題目知 $R^2$ = 0.9564 ，表示模型解釋了 95.64% 的變異，模型擬合效果極佳
+由題目知 $R^2$ = 0.9564 ，表示模型解釋了 95.64% 的變異
