--- a/HW1207/08_蕭宇辰/CH12.05_Q03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.05_Q03_Q05.md
@@ -2,9 +2,9 @@
 
 3.
 
-當 $x_0$ = 5時， $\hat{y}$ = 2.374
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
 
-信賴區間為 $\hat{y} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
 Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
 
@@ -15,9 +15,9 @@ Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
 
 5.
 
-當 $x_0$ = 5時， $\hat{y}$ = 2.374
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
 
-預測區間為 $\hat{y} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
 Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
 
