--- a/HW1207/08_蕭宇辰/CH12.05_Q07_Q08.md
+++ b/HW1207/08_蕭宇辰/CH12.05_Q07_Q08.md
@@ -7,9 +7,9 @@
 
 7.
 
-當 $x_0$ = 1時， $\hat{y}$ = 4.2
+當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
 
-信賴區間為 $\hat{y} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
 Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
 
@@ -20,9 +20,9 @@ Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
 
 8.
 
-當 $x_0$ = 1時， $\hat{y}$ = 4.2
+當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
 
-預測區間為 $\hat{y} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
 Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
 
