--- a/HW1207/08_蕭宇辰/CH12.05_Q09_Q10.md
+++ b/HW1207/08_蕭宇辰/CH12.05_Q09_Q10.md
@@ -5,7 +5,7 @@
 9.找出當 x=2 時，y 的平均值的 95% 信賴區間(CI)。
 ---
 
-由題目知，x=2時 $\hat{y}$ = 4.88571
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
 
 95%信賴區間為 [4.60061,5.17081]
 
@@ -13,6 +13,6 @@
 10.找出當 x=2 時，未來觀察到的 y 值的 95% 預測區間(PI)。
 ---
 
-由題目知，x=2時 $\hat{y}$ = 4.88571
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
 
 95%預測區間為 [4.28856,5.48287]
