--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -1,4 +1,4 @@
-# **CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
+8# **CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
 
 ![image](https://github.com/user-attachments/assets/e408d551-5732-41c3-a89b-d8ffa02ce67b)
 
@@ -22,7 +22,7 @@ Ans:
 
 2. $S_{xx} = \sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
 
-3. $MSE = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
+3. $MSE = \frac{SSE}{n-2}  = \frac{24}{8} = 3 , \sqrt{MSE} = \sqrt{3} \approx 1.732$
 
 4. 標準誤SE：
 
@@ -34,13 +34,13 @@ $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx
 
 5. 誤差範圍： $t \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
 
-6. 預測平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
+6. 估計平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
 
 **信賴區間：** $2.374 \pm 1.0998 = [1.274\, 3.474]$
 
 
-**（二）特別值的預測區間 (Prediction Intervals for a Particular Value of y)**  
-利用上題 3–4 相同的資料，對於在 $x = x_0$ 下特別值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均值的信賴區間之寬度。  
+**（二）獨特值的預測區間 (Prediction Intervals for a Particular Value of y)**  
+利用上題 3–4 相同的資料，對於在 $x = x_0$ 下獨特值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均值的信賴區間之寬度。  
 
 5. 使用題 3 的資料，在 $x_0 = 5$ 時找出 90% 預測區間。  
 
@@ -59,7 +59,7 @@ Ans:
 
 結論
 
-比較相同信賴水準(90%)與相同 $x_0$時，特別值的預測區間 (Prediction Interval) 比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外，還包含特別值本身的變異性。
+比較相同信賴水準(90%)與相同 $x_0$時，特別值的預測區間 (Prediction Interval) 一定比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外（error），還包含獨特值本身的變異性（ε）。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
 
