更新 HW1207Q11.md

--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -10,7 +10,7 @@
 **（一）平均值的信賴區間 (Confidence Intervals for the Average Value of y)**  
 利用以下給定的資訊，在 $x = x_0$ 時，求出平均值 $y$的信賴區間。  
 
-3. 給定 $n = 10$ , $\text{SSE} = 24$ ,  $\sum{x_i} = 59$ , $\sum{x_i^2} = 397$ ，迴歸方程為 $\hat{y} = 0.074 + 0.46x$ , 欲在 $x_0 = 5$ 時求出 90% 的平均值信賴區間。
+3. 給定 $n = 10$ , $\text{SSE} = 24$ ,  $\sum{x_i} = 59$ , $\sum{x_i^2} = 397$ ，迴歸方程式為 $\hat{y} = 0.074 + 0.46x$ , 在 $x_0 = 5$ 時找出 90% 的平均值信賴區間。
 
 Ans:
 
@@ -59,7 +59,7 @@ Ans:
 
 結論
 
-比較相同信賴水準(90%)與相同 $x_0$時，特別值的預測區間 (Prediction Interval) 一定比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外（error），還包含獨特值本身的變異性（ε）。
+比較相同信賴水準(90%)與相同 $x_0$時，獨特值的預測區間 (Prediction Interval) 一定比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外（error），還包含獨特值本身的變異性（ε）。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
 
