--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -1,40 +1,37 @@
-Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18, Section 12.1). Construct the ANOVA table for a simple linear regression analysis, showing
-the sources, degrees of freedom, sums of squares, and mean squares.  
-
-x −2 −1 0 1 2
-y 1 1 3 5 5
-
-| x | −2 | −1 | 0  |1 | 2 |   
-| y | 1  | 1  | 3 | 5 | 5| 
+Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18, Section 12.1). Construct the ANOVA table for a simple linear regression analysis, showing the sources, degrees of freedom, sums of squares, and mean squares.  
+|       |    | | || |
+| :----:  | :--:   | :--: | :--: |   :--: |    :--: | 
+| x | −2 | −1 | 0 | 1 | 2 |   
+| y | 1  | 1  | 3 | 5 | 5 | 
 
 ---
-結果
-       Source  DF    SS         MS     F
-0  Regression   1  14.4  14.400000  27.0
-1    Residual   3   1.6   0.533333   NaN
-2       Total   4  16.0        NaN   NaN
-The ANOVA table for the given data points is:
-Source	DF	SS	MS	F
-Regression	1	14.4	14.4	27.0
-Residual	3	1.6	0.533333	
-Total	4	16.0		
+To construct the ANOVA table for the simple linear regression analysis, we follow these steps:  
+1. Calculate the regression line:  
+   Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.  
+2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
+3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).
+4.  Fill out the ANOVA table.
+![image](https://github.com/user-attachments/assets/7421ba3c-38b6-48e2-b6f2-130b1613c465)
 
-Key Components:   
-1.	Regression:  
-o	DFReg=1DF_{\text{Reg}} = 1DFReg=1  
-o	SSReg=14.4SS_{\text{Reg}} = 14.4SSReg=14.4  
-o	MSReg=14.4MS_{\text{Reg}} = 14.4MSReg=14.4   
+N = 總樣本數 5  
+K = 組別數 2  
+$df_{reg}$ = k-1 = 1  
+$df_{error}$ = n-k = 3   
+$df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
 
-3.	Residual:  
-o	DFRes=3DF_{\text{Res}} = 3DFRes=3  
-o	SSRes=1.6SS_{\text{Res}} = 1.6SSRes=1.6  
-o	MSRes=0.533333MS_{\text{Res}} = 0.533333MSRes=0.533333  
+SSR =  $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4 - $15^2$ / 5 = 14.4  
+SSE = SST - SSR = 1.6
+SST = SST + SSR = 14.4 + 1.6 = 16
 
-5.	Total:  
-o	DFTotal=4DF_{\text{Total}} = 4DFTotal=4  
-o	SSTotal=16.0SS_{\text{Total}} = 16.0SSTotal=16.0  
+MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
+MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
 
-7.	F-statistic:  
-o	F=MSRegMSRes=27.0F = \frac{MS_{\text{Reg}}}{MS_{\text{Res}}} = 27.0F=MSResMSReg=27.0  
-This indicates that the regression model explains a significant proportion of the variation in yyy.   
+
+4. The ANOVA table for the given data points is:
+
+| Source  | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Regression   | 1     | 14.4  | 14.4  |
+| Error (Residual) | 3     | 1.6 | 0.5333 |
+| Tatol | 4     | 16 |
 
