--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -7,10 +7,13 @@ Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18
 ---
 To construct the ANOVA table for the simple linear regression analysis, we follow these steps:  
 1. Calculate the regression line:  
-   Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.  
+   Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.
+   ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
+
 2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
+![image](https://github.com/user-attachments/assets/2ebd699d-2c10-4622-89ac-a4865c7ad6c9)
+
 3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).
-4.  Fill out the ANOVA table.
 ![image](https://github.com/user-attachments/assets/7421ba3c-38b6-48e2-b6f2-130b1613c465)
 
 N = 總樣本數 5  
@@ -19,13 +22,12 @@ $df_{reg}$ = k-1 = 1
 $df_{error}$ = n-k = 3   
 $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
 
-SSR =  $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4 - $15^2$ / 5 = 14.4  
+SSR = 59.4 - $15^2$ / 5 = 14.4  
 SSE = SST - SSR = 1.6
 SST = SST + SSR = 14.4 + 1.6 = 16
 
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
-
 
 4. The ANOVA table for the given data points is:
 
