--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -13,8 +13,7 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
 2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
 ![image](https://github.com/user-attachments/assets/2ebd699d-2c10-4622-89ac-a4865c7ad6c9)
 
-3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).
-![image](https://github.com/user-attachments/assets/7421ba3c-38b6-48e2-b6f2-130b1613c465)
+3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).![image](https://github.com/user-attachments/assets/6345a9eb-0865-4e2b-bc73-97a9ced67845)
 
 N = 總樣本數 5  
 K = 組別數 2  
@@ -22,8 +21,8 @@ $df_{reg}$ = k-1 = 1
 $df_{error}$ = n-k = 3   
 $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
 
-SSR = 59.4 - $15^2$ / 5 = 14.4  
-SSE = SST - SSR = 1.6
+SSR = 14.4  
+SSE = 1.6
 SST = SST + SSR = 14.4 + 1.6 = 16
 
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
