--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -11,9 +11,10 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
    ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
 
 2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
-![image](https://github.com/user-attachments/assets/2ebd699d-2c10-4622-89ac-a4865c7ad6c9)
+[image](https://github.com/user-attachments/assets/6345a9eb-0865-4e2b-bc73-97a9ced67845)
 
-3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).![image](https://github.com/user-attachments/assets/6345a9eb-0865-4e2b-bc73-97a9ced67845)
+3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
+![image](https://github.com/user-attachments/assets/c608e140-bcda-4d6a-b6f8-ba83beec2bb3)
 
 N = 總樣本數 5  
 K = 組別數 2  
