--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -11,7 +11,8 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
    ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
 
 2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
-[image](https://github.com/user-attachments/assets/6345a9eb-0865-4e2b-bc73-97a9ced67845)
+![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
+
 
 3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
 ![image](https://github.com/user-attachments/assets/c608e140-bcda-4d6a-b6f8-ba83beec2bb3)
